--- a/stylesheets/sass/index.sass
+++ b/stylesheets/sass/index.sass
@@ -1,4 +1,6 @@
-@use 'variable' as v
-
-html
-  background: v.$background-color
+@use 'base'
+@use 'layout'
+@use 'modules/state'
+@use 'modules/turn'
+@use 'modules/table'
+@use 'modules/button'
